[PathBundle] Correct display of summary on small screens (#760)
* move less outside public dir

* remove debug

* reduce summary size for small screens

--- a/plugin/path/Resources/less/summary.less
+++ b/plugin/path/Resources/less/summary.less
@@ -309,12 +309,16 @@
     }
 
     .path-summary-opened {
+        .path-summary-container {
+            width: @path-summary-width-xs !important;
+        }
+
         .path-summary-pinned{
-            margin-left: @path-summary-width !important;
+            margin-left: @path-summary-width-xs !important;
         }
 
         .path-summary-pin-toggle-btn {
-            left: @path-summary-width + 30px !important;
+            left: @path-summary-width-xs + 30px !important;
         }
     }
 }
