--- a/plugin/path/Resources/less/variables.less
+++ b/plugin/path/Resources/less/variables.less
@@ -9,4 +9,5 @@
 @lvl-light-blue:  #91deea;
 
 @path-summary-width: 400px;
+@path-summary-width-xs: 280px;
 @path-summary-font: @font-size-base;
